style: fix screenshot spacing on Firefox

--- a/src/components/Screenshot/styles.module.scss
+++ b/src/components/Screenshot/styles.module.scss
@@ -4,7 +4,7 @@
 
   aspect-ratio: 1640 / 1050;
 
-  padding: 4rem 0 6rem;
+  margin: 4rem 0 6rem;
 
   @media screen and (min-width: 480px) {
     display: flex;
